--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>org.eclipse.ee4j.faces.tck</groupId>
     <artifactId>jakarta-faces-tck</artifactId>
-    <version>4.0.3-SNAPSHOT</version>
+    <version>4.0.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Jakarta Faces ${project.version} TCK</name>
@@ -372,7 +372,7 @@
             <properties>
                 <!-- Explicit version of Mojarra to test -->
                 <mojarra.noupdate>false</mojarra.noupdate>
-                <mojarra.version>4.0.8-SNAPSHOT</mojarra.version>
+                <mojarra.version>4.0.7</mojarra.version>
                 
                 <!-- Verhicle used for testing the Mojarra version -->
                 <glassfish.version>7.0.14</glassfish.version>
